--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -76,8 +76,8 @@
                         <ul class="submenuItems">
                             <li onclick="DoCaNhan()"><a href="#">Chăn, ra, gối, nệm</a></li>
                             <li onclick="DoCaNhan()"><a href="#">Giày dép</a></li>
-                            <li onclick="DoCaNhan()"><a href="#">Nón, mũ</a></li>
                             <li onclick="DoCaNhan()"><a href="#">Quần áo</a></li>
+                            <li onclick="DoCaNhan()"><a href="#">Đồ dùng cá nhân khác</a></li>
                         </ul>
                     </li>
                     <li>
