--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
@@ -69,26 +69,26 @@
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Loại sản phẩm:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.loai</p>
             </div>
-            <div class="d-flex mb-3" style="width: 100%;display: flex;">
+            @*<div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Hãng sản xuất:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.nsx</p>
-            </div>
-            <div class="d-flex mb-3" style="width: 100%;display: flex;">
+            </div>*@
+            @*<div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Thời gian sử dụng:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.thoigiansp tháng</p>
-            </div>
+            </div>*@
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số lượng còn lại:</strong></p>
+                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số lượng:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.soluongsp sản phẩm</p>
             </div>
             <div class="d-flex align-items-center mb-4 pt-2 dieukhiendathang">
-                <div class="input-group quantity mr-3" style="width: 130px;">
+                <div class="input-group quantity mr-3" style="width: 120px;">
                     <div class="input-group-btn">
                         <button class="btn btn-primary btn-minus" onclick="Giam1()">
                             <i class="fa fa-minus"></i>
                         </button>
                     </div>
-                    <input type="text" id="soluongsp" class="form-control bg-secondary text-center" value="1" oninput="ChiNhapSo(this); KiemTraSoLuongSanPham(@Model.soluongsp);">
+                    <input type="text" id="soluongsp" style="height: 37px;" class="form-control bg-secondary text-center" value="1" oninput="ChiNhapSo(this); KiemTraSoLuongSanPham(@Model.soluongsp);">
                     <div class="input-group-btn">
                         <button class="btn btn-primary btn-plus" onclick="Tang1(@Model.soluongsp)">
                             <i class="fa fa-plus"></i>
