--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemSPDoNoiThat.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemSPDoNoiThat.cshtml
@@ -1,14 +1,12 @@
 ﻿@model IEnumerable<QL_CDC.Models.SelectListModel>
 
-@{
-    ViewData["Title"] = "ThemSanPham";
-    Layout = "~/Views/Shared/_SecondLayout.cshtml";
-}
+@{ ViewData["Title"] = "ThemSanPham";
+                Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
 
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h3 class=" px-5 " style="font-weight:bold"><span class="px-2"><b>Danh mục/ </b>        Đồ dùng cá nhân</span></h3>
+        <h3 class=" px-5 " style="font-weight:bold"><span class="px-2"><b>Danh mục/ </b>        Gia dụng, nội thất</span></h3>
     </div>
     <br>
     <div class="table-themsanpham">
@@ -28,13 +26,13 @@
         <div class="add_input_2" style="width:40%">
             <select class="form-control" id="add_l">
                 <option value="" style="text-align:center" selected disabled>--- Loại ---</option>
-                <option value="1" style="text-align:center; font-weight:bold ">Chăn, ra, gối, nệm</option>
-                <option value="2" style="text-align:center; font-weight:bold ">Giày dép</option>
-                <option value="3" style="text-align:center; font-weight:bold ">Quần áo</option>
-                <option value="4" style="text-align:center;font-weight:bold ">Khác</option>
+                <option value="13" style="text-align:center; font-weight:bold ">Giá đỡ, kệ, tủ</option>
+                <option value="14" style="text-align:center; font-weight:bold ">Máy giặt, tủ lạnh, quạt,...</option>
+                <option value="16" style="text-align:center; font-weight:bold ">Đồ gia dụng</option>
+                <option value="20" style="text-align:center;font-weight:bold ">Khác</option>
             </select>
-        </div>        
-        
+        </div>
+
     </div>
     <!--Thoi gian, gia-->
     <div class="table-themsanpham2">
@@ -44,7 +42,7 @@
         </div>
         <div class="add_input_number">
             <input type="text" id="add_gia" class="form-control" placeholder="VND" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
-        </div> 
+        </div>
         <div style="width: 20%">
 
         </div>
@@ -58,14 +56,14 @@
         <div class="add_input_number">
             <input type="number" id="add_sl" min="0" class="form-control" placeholder="Đơn vị" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
         </div>
-        
-        @*<div class="add_label">
-            <label>Nhà sản xuất: </label>
 
-        </div>
-        <div class="add_input_number">
-            <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
-        </div>*@
+        @*<div class="add_label">
+                <label>Nhà sản xuất: </label>
+
+            </div>
+            <div class="add_input_number">
+                <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
+            </div>*@
     </div>
     <!--Hinh anh-->
     <div class="table-themsanpham2">
@@ -100,11 +98,10 @@
 </div>
 
 
-<script>
-    // Dang san pham
+<script>// Dang san pham
     function DangSanPham() {
         var tensp = document.getElementById('add_ten').value;
-        var mahang = 1;
+        var mahang = 3;
         var maloai = document.getElementById('add_l').value;
         var gia = $('#add_gia').val();
         var tg = $('#add_thoigian').val();
@@ -122,7 +119,7 @@
             formData.append("mahang", mahang);
             formData.append("maloai", maloai);
             formData.append("gia", gia);
-            /*formData.append("tg", tg);*/
+            formData.append("tg", tg);
             formData.append("sl", sl);
             formData.append("nsx", nsx);
             formData.append("mota", mota);
@@ -146,7 +143,7 @@
         var check = false;
         if (tensp == null || tensp == "") {
             alert("Vui lòng nhập tên sản phẩm")
-        }       
+        }
         else if (gia == null || gia == 0 || gia == 0) {
             alert("Vui lòng nhập giá cho sản phẩm")
         }
@@ -238,5 +235,4 @@
                 reader.readAsDataURL(input.files[i]);
             }
         }
-    }
-</script>
+    }</script>
