--- a/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/ChiTietHoaDonMua.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "ChiTietHoaDonMua";
     Layout = "~/Views/Shared/_ThirdLayout.cshtml";
 }
+<script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 
 <div class="text-center mb-4">
     <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Chi tiết hóa đơn</span></h2>
