--- a/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_ThirdLayout.cshtml
@@ -63,15 +63,13 @@
     <div class="container-fluid">
         <div class="row border-top px-xl-5" style="margin-left: -70px">
             <div class="col-lg-3 d-none d-lg-block">
-                
-
-                <ul class="accordion-menu" style="margin-top:0px; position:fixed">
+                <ul class="accordion-menu" style="margin-top:0px; position:fixed; width:300px">
                     <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 60px; margin-top: -1px; padding: 0 30px">
                         <h5 class="m-3" style="color: white"><b>Danh mục sản phẩm</b></h5>
                     </a>
                     <li>
                         <div class="dropdownlink">
-                            <h5><i class="fa fa-male" aria-hidden="true"></i> Đồ cá nhân <i class="fa fa-chevron-down" aria-hidden="true"></i></h5>
+                            <h5><i class="fa fa-male" aria-hidden="true"></i> Đồ cá nhân, Thời trang <i class="fa fa-chevron-down" aria-hidden="true"></i></h5>
                         </div>
                         <ul class="submenuItems">
                             <li onclick="DoCaNhan()"><a href="#">Chăn, ra, gối, nệm</a></li>
@@ -97,7 +95,7 @@
                     <li>
                         <div class="dropdownlink">
                             <h5>
-                                <i class="fa fa-bed" aria-hidden="true"></i> Nội thất
+                                <i class="fa fa-bed" aria-hidden="true"></i> Nội thất, Gia dụng
                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                             </h5>
                         </div>
@@ -110,7 +108,7 @@
                     <li>
                         <div class="dropdownlink">
                             <h5>
-                                <i class="fa fa-motorcycle" aria-hidden="true"></i> Xe
+                                <i class="fa fa-motorcycle" aria-hidden="true"></i> Xe cộ
                                 <i class="fa fa-chevron-down" aria-hidden="true"></i>
                             </h5>
 
@@ -119,6 +117,15 @@
                             <li onclick="PhuongTien()"><a href="#">Xe máy</a></li>
                             <li onclick="PhuongTien()"><a href="#">Xe đạp</a></li>
                         </ul>
+                    </li>
+                    <li>
+                        <div class="dropdownlink">
+                            <h5 onclick="DoKhac()">
+                                Khác
+                                <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                            </h5>
+                        </div>
+                       
                     </li>
                 </ul>
 
@@ -182,7 +189,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="container-fluid">
-    <div class="row justify-content-center row-1">
+    <div class="row justify-content-center row-1" style="margin-left:80px">
         <div style="width:900px; margin-left:155px">
             <h4><b>WEBSITE RAO VẶT TRỰC TUYẾN DÀNH CHO SINH VIÊN</b></h4>
             <h5>
