--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/DoiMatKhau.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/DoiMatKhau.cshtml
@@ -1,6 +1,7 @@
 ﻿@model SinhVienModel
 @{ ViewData["Title"] = "DoiMatKhau";
     Layout = "~/Views/Shared/_ThirdLayout.cshtml"; }
+<script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 <div class="container-fluid pt-5" style="margin-top:-50px">
     <div class="text-center mb-4">
         <h3 class="section-title px-5"><span class="px-2">Đổi mật khẩu</span></h3>
