--- a/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/TaiKhoan/ThongTinTaiKhoan.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "ThongTinTaiKhoan";
     Layout = "~/Views/Shared/_ThirdLayout.cshtml";
 }
-
+<script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 <div class="container-fluid pt-5" style="margin-top:-50px">
     <div class="text-center mb-4">
         <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Thông tin cá nhân</span></h2>
