--- a/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/HoaDon/DanhSachHoaDonNguoiMua.cshtml
@@ -4,6 +4,7 @@
     Layout = "_ThirdLayout";
 }
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
 <div class="text-center mb-4" style="margin-top:-20px; ">
     <h2 class="section-title px-5"><span class="px-2" style="background-color:gainsboro">Hóa đơn đã đặt</span></h2>
 </div>
