--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChiTietSanPham.cshtml
@@ -1,13 +1,13 @@
 ﻿@model SanPhamModel
-@{
-    ViewData["Title"] = "ChiTietSanPham_A";
-    Layout = "~/Views/Shared/_ThirdLayout.cshtml";
-}
+@{ ViewData["Title"] = "ChiTietSanPham";
+                Layout = "~/Views/Shared/_ThirdLayout.cshtml"; }
 
-@{ 
-    string dongia = string.Format("{0:#,##0.########}", Model.dongiasp);
-    string giagoc = string.Format("{0:#,##0.########}", Model.giagocsp);
-}
+@{ string dongia = string.Format("{0:#,##0.########}", Model.dongiasp);
+                string giagoc = string.Format("{0:#,##0.########}", Model.giagocsp); }
+
+<!-- build:js assets/vendor/js/core.js -->
+<script src="/template/sneat//assets/vendor/js/bootstrap.js"></script>
+
 <!-- Shop Detail Start -->
 <div class="container-fluid py-5">
     <div id="alertdiv"></div>
@@ -20,10 +20,9 @@
                     </div>
                     @for (var i = 1; i < Model.anhsp.Count(); i++)
                     {
-                        <div class="carousel-item">
-                            <img class="w-100 h-100" src="@Model.anhsp[i]" alt="Image">
-                        </div>
-                    }
+        <div class="carousel-item">
+            <img class="w-100 h-100" src="@Model.anhsp[i]" alt="Image">
+        </div>}
                 </div>
                 <a class="carousel-control-prev" href="#product-carousel" data-slide="prev">
                     <i class="fa fa-2x fa-angle-left muiten"></i>
@@ -36,9 +35,7 @@
 
         <div class="col-lg-7 pb-5 thongtin">
             <h3 class="font-weight-semi-bold">@Model.tensp</h3>
-            @{
-                var sosao = Math.Round(Model.danhgiasp, 0, MidpointRounding.AwayFromZero);
-            }
+            @{ var sosao = Math.Round(Model.danhgiasp, 0, MidpointRounding.AwayFromZero); }
             <div class="d-flex mb-2">
                 <div class="text-primary mr-2" id="saotong">
                     <!-- Hien thi so sao -->
@@ -49,8 +46,7 @@
                 <h3 class="font-weight-semi-bold mb-2" style="width: 28%"> @dongia </h3>
                 @if (dongia != giagoc)
                 {
-                    <h3 class="font-weight-semi-bold mb-3" style="width: 28%"><del>@giagoc </del></h3>
-                }
+    <h3 class="font-weight-semi-bold mb-3" style="width: 28%"><del>@giagoc </del></h3>}
             </div>
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Đăng bởi:</strong></p>
@@ -70,13 +66,13 @@
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.loai</p>
             </div>
             @*<div class="d-flex mb-3" style="width: 100%;display: flex;">
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Hãng sản xuất:</strong></p>
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.nsx</p>
-            </div>*@
+                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Hãng sản xuất:</strong></p>
+                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.nsx</p>
+                </div>*@
             @*<div class="d-flex mb-3" style="width: 100%;display: flex;">
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Thời gian sử dụng:</strong></p>
-                <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.thoigiansp tháng</p>
-            </div>*@
+                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Thời gian sử dụng:</strong></p>
+                    <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.thoigiansp tháng</p>
+                </div>*@
             <div class="d-flex mb-3" style="width: 100%;display: flex;">
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 40%;"><strong>Số lượng:</strong></p>
                 <p class="text-dark font-weight-medium mb-0 mr-3" style="width: 60%;">@Model.soluongsp sản phẩm</p>
@@ -101,19 +97,16 @@
     </div>
     <div class="row px-xl-5">
         <div class="col">
-            <div class="nav nav-tabs justify-content-center border-secondary mb-4" style="margin-left: -450px">
-                <a class="nav-item nav-link dndk active" style="color: black" data-toggle="tab" href="#tab-pane-1" id="tabmota">Mô tả</a>
-                <a class="nav-item nav-link dndk" style="color: black" data-toggle="tab" href="#tab-pane-3" id="tabdanhgia">Đánh giá người bán (@Model.nhanxetsp.Count())</a>
-               
+            <div class="nav nav-tabs justify-content-center border-secondary mb-4" style="margin-left:-810px">                
             </div>
             <div class="tab-content">
-                <div class="tab-pane fade show active" id="tab-pane-1">
-                    <h4 class="mb-3">Mô tả sản phẩm</h4>
+                <div >
+                    <h4 class="mb-3"><b>Mô tả sản phẩm</b></h4>
                     <p style="color: black;">@Model.motasp</p>
                 </div>
-                <div class="tab-pane fade" id="tab-pane-3">
+                @*<div>
                     @await Html.PartialAsync("../SanPham/_NhanXetPartial.cshtml")
-                </div>
+                </div>*@
             </div>
         </div>
     </div>
@@ -142,7 +135,7 @@
         }
     }
 
-    // them 1 sp 
+    // them 1 sp
     function Tang1(x) {
         var sl = $('#soluongsp').val();
         if (parseInt(sl) + 1 > x) {
