--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChonLoaiSPThem.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChonLoaiSPThem.cshtml
@@ -2,21 +2,178 @@
 
 @{ ViewData["Title"] = "ThemSanPham";
                 Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
-<div class="container-fluid pt-5" style=" margin-top: -20px; margin-left: 0px">
+
+
+
+<div class="col-lg-3 d-none d-lg-block" style="margin-top:-10px; height:600px";>
+    <ul class="accordion-menu" style="margin-top:0px; width:300px">
+        <h4 style="margin-left:20px"><span> <b>Chọn danh mục bạn muốn thêm</b></span></h4>
+        <li>
+            <div class="dropdownlink">
+                <h5> Đồ cá nhân, Thời trang</h5>
+            </div>
+            <ul class="submenuItems">
+                <li onclick="ThemQuanAo()"><a href="#">Quần áo</a></li>
+                <li onclick="ThemGiayDep()"><a href="#">Giày dép</a></li>
+                <li onclick="ThemPhuKien()"><a href="#">Phụ kiện thời trang</a></li>
+                <li onclick="ThemTuiBalo()"><a href="#">Túi, balo</a></li>
+                <li onclick="ThemCaNhanKhac()"><a href="#">Đồ dùng cá nhân khác</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="dropdownlink">
+                <h5>
+                    Đồ điện tử
+                </h5>
+            </div>
+            <ul class="submenuItems">
+                <li onclick="ThemDienThoai()"><a href="#">Điện thoại</a></li>
+                <li onclick="DoCaNhan()"><a href="#">Laptop</a></li>
+                <li onclick="DoCaNhan()"><a href="#">Chuột máy tính</a></li>
+                <li onclick="DoCaNhan()"><a href="#">Bàn phím máy tính</a></li>
+                <li onclick="DoDienTu()"><a href="#">Đồ điện tử khác</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="dropdownlink">
+                <h5>
+                    Nội thất, Gia dụng
+                </h5>
+            </div>
+            <ul class="submenuItems">
+                <li onclick="ThemKeTu()"><a href="#">Tủ, kệ</a></li>
+                <li onclick="ThemBanGhe()"><a href="#">Bàn ghế</a></li>
+                <li onclick="ThemGiuong()"><a href="#">Giường, chăn ga gối nệm</a></li>
+                <li onclick="ThemDungCuNhaBep()"><a href="#">Dụng cụ nhà bếp</a></li>
+                <li onclick="ThemQuatDieuHoa()"><a href="#">Quạt, điều hòa</a></li>
+                <li onclick="ThemDen()"><a href="#">Đèn</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="dropdownlink">
+                <h5>
+                    Xe cộ
+                </h5>
+
+            </div>
+            <ul class="submenuItems">
+                <li onclick="PhuongTien()"><a href="#">Xe máy</a></li>
+                <li onclick="PhuongTien()"><a href="#">Xe đạp</a></li>
+            </ul>
+        </li>
+        <li>
+            <div class="dropdownlink">
+                <h5>
+                    Khác
+                </h5>
+
+            </div>
+            
+        </li>
+    </ul>
+
+</div>
+
+<script>
+    $(function () {
+        var Accordion = function (el, multiple) {
+            this.el = el || {};
+            // more then one submenu open?
+            this.multiple = multiple || false;
+
+            var dropdownlink = this.el.find('.dropdownlink');
+            dropdownlink.on('click',
+                { el: this.el, multiple: this.multiple },
+                this.dropdown);
+        };
+
+        Accordion.prototype.dropdown = function (e) {
+            var $el = e.data.el,
+                $this = $(this),
+                //this is the ul.submenuItems
+                $next = $this.next();
+
+            $next.slideToggle();
+            $this.parent().toggleClass('open');
+
+            if (!e.data.multiple) {
+                //show only one menu at the same time
+                $el.find('.submenuItems').not($next).slideUp().parent().removeClass('open');
+            }
+        }
+
+        var accordion = new Accordion($('.accordion-menu'), false);
+    })
+
+
+    function ThemQuanAo() {
+        window.location.href = '/SanPham/ThemSanPham';
+    }
+    function ThemGiayDep() {
+        window.location.href = '/SanPham/ThemGiayDep';
+    }
+    function ThemPhuKien() {
+        window.location.href = '/SanPham/ThemPhuKien';
+    }
+    function ThemTuiBalo() {
+        window.location.href = '/SanPham/ThemTuiBalo';
+    }
+    function ThemCaNhanKhac() {
+        window.location.href = '/SanPham/ThemCaNhanKhac';
+    }
+
+    function DoDienTu() {
+        window.location.href = '/SanPham/ThemSPDoDienTu';
+    }
+
+    function ThemKeTu() {
+        window.location.href = '/SanPham/ThemKeTu';
+    }
+
+    function ThemBanGhe() {
+        window.location.href = '/SanPham/ThemBanGhe';
+    }
+
+    function ThemGiuong() {
+        window.location.href = '/SanPham/ThemGiuong';
+    }
+
+    function ThemDungCuNhaBep() {
+        window.location.href = '/SanPham/ThemDungCuNhaBep';
+    }
+
+    function ThemQuatDieuHoa() {
+        window.location.href = '/SanPham/ThemQuatDieuHoa';
+    }
+
+    function ThemDen() {
+        window.location.href = '/SanPham/ThemDen';
+    }
+
+    function ThemDienThoai() {
+        window.location.href = '/SanPham/ThemDienThoai';
+    }
+
+    function DoKhac() {
+        window.location.href = '/SanPham/ThemSanPham';
+    }
+</script>
+
+@*<div class="container-fluid pt-5" style=" margin-top: -20px; margin-left: 0px">-->*@
     <!--Ten-->
-    <div class="text-left mb-4">
-        <h4><span> <b>Danh mục sản phẩm bạn muốn thêm</b></span></h4>
-    </div>    
+    <!--<div class="text-left mb-4">
+        <h4><span> <b>Danh mục sản phẩm </b></span></h4>
+    </div>-->    
     <!--Loai-->
-    <div class="table-themsanpham2">
+    <!--<div class="table-themsanpham2">
         
         <div class="add_input_2" style="width:50%">
             <select class="form-control" onchange="ChonLoai(value);" id="add_mh" style="text-align: left; font-size: 17px; font-weight: bold">
                 <option value="0" style="text-align: left; font-size:17px; stop-color:gray" selected disabled >Chọn loại sản phẩm</option>
-                <option value="1" style="text-align: left; font-size:17px; font-weight:bold">Đồ dùng cá nhân (Quần áo, giáy dép,...)</option>
-                <option value="2" style="text-align: left; font-size: 17px; font-weight: bold">Đồ điện tử (Laptop, điện thoại,...)</option>
+                <option value="1" style="text-align: left; font-size:17px; font-weight:bold">Đồ dùng cá nhân, thời trang</option>
+                <option value="2" style="text-align: left; font-size: 17px; font-weight: bold">Đồ điện tử</option>
                 <option value="3" style="text-align: left; font-size: 17px; font-weight: bold">Đồ gia dụng, nội thất</option>
-                <option value="4" style="text-align: left; font-size: 17px; font-weight: bold">Xe (Xe máy, xe đạp, xe điện)</option>
+                <option value="4" style="text-align: left; font-size: 17px; font-weight: bold">Xe cộ</option>
                 <option value="5" style="text-align: left; font-size: 17px; font-weight: bold">Khác</option>
             </select>
         </div>
@@ -48,4 +205,4 @@
     }
 
     
-</script>
+</script>-->
