--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemKeTu.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemKeTu.cshtml
@@ -1,43 +1,26 @@
 ﻿@model IEnumerable<QL_CDC.Models.SelectListModel>
 
 @{ ViewData["Title"] = "ThemSanPham";
-                Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
+    Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
 
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h3 class=" px-5 " style="font-weight:bold"><span class="px-2"><b>Danh mục/ </b>        Gia dụng, nội thất</span></h3>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Nội thất, gia dụng - Tủ, kệ</span></h4>
     </div>
     <br>
     <div class="table-themsanpham">
         <div class="add_label">
-            <label>Tiêu đề: </label>
+            <label>Tiêu đề </label>
         </div>
         <div class="add_input">
-            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tên của sản phẩm" />
+            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tiêu đề bài đăng" />
         </div>
-    </div>
-    <!--Loai-->
-    <div class="table-themsanpham2">
-        <div class="add_label">
-            <label>Loại sản phẩm: </label>
-
-        </div>
-        <div class="add_input_2" style="width:40%">
-            <select class="form-control" id="add_l">
-                <option value="" style="text-align:center" selected disabled>--- Loại ---</option>
-                <option value="13" style="text-align:center; font-weight:bold ">Giá đỡ, kệ, tủ</option>
-                <option value="14" style="text-align:center; font-weight:bold ">Máy giặt, tủ lạnh, quạt,...</option>
-                <option value="16" style="text-align:center; font-weight:bold ">Đồ gia dụng</option>
-                <option value="20" style="text-align:center;font-weight:bold ">Khác</option>
-            </select>
-        </div>
-
     </div>
     <!--Thoi gian, gia-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Giá: </label>
+            <label>Giá </label>
 
         </div>
         <div class="add_input_number">
@@ -47,10 +30,22 @@
 
         </div>
     </div>
+    <div class="table-themsanpham2">
+        <div class="add_label">
+            <label>Tình trạng </label>
+
+        </div>
+        <div class="add_input_2" style="width:20%">
+            <select class="form-control" id="add_tinhtrang" style="font-weight: bold">
+                <option value="0" style="text-align:left; font-weight:bold ">Mới</option>
+                <option value="1" style="text-align:left; font-weight:bold ">Đã sử dụng</option>
+            </select>
+        </div>
+    </div>
     <!--So luong, nsx-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Số lượng: </label>
+            <label>Số lượng </label>
 
         </div>
         <div class="add_input_number">
@@ -65,10 +60,11 @@
                 <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
             </div>*@
     </div>
+
     <!--Hinh anh-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Hình ảnh: </label>
+            <label>Hình ảnh </label>
 
         </div>
         <div class="add_input_file">
@@ -82,11 +78,11 @@
     <!--Mota-->
     <div class="table-themsanpham" style="margin-top:2vh">
         <div class="add_label" style="width:50%">
-            <label>Mô tả sản phẩm: </label>
+            <label>Mô tả sản phẩm </label>
         </div>
     </div>
     <div class="table-themsanpham" style="margin-top:0vh">
-        <textarea class="form-control" id="add_mota" placeholder="Tên sản phẩm, nhãn hiệu, chất liệu, màu sắc, ..."></textarea>
+        <textarea class="form-control" id="add_mota" placeholder="Tên, loại , kích thước (Dài x Rộng), chất liệu, thiết kế,..."></textarea>
     </div>
     <!--Nut-->
     <div class="table-themsanpham" style="margin-top:2vh;">
@@ -102,7 +98,7 @@
     function DangSanPham() {
         var tensp = document.getElementById('add_ten').value;
         var mahang = 3;
-        var maloai = document.getElementById('add_l').value;
+        var maloai = 13;
         var gia = $('#add_gia').val();
         var tg = $('#add_thoigian').val();
         var sl = $('#add_sl').val();
@@ -119,7 +115,7 @@
             formData.append("mahang", mahang);
             formData.append("maloai", maloai);
             formData.append("gia", gia);
-            formData.append("tg", tg);
+            /*formData.append("tg", tg);*/
             formData.append("sl", sl);
             formData.append("nsx", nsx);
             formData.append("mota", mota);
