--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemSanPham.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemSanPham.cshtml
@@ -8,69 +8,65 @@
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h3 class=" px-5 " style="font-weight:bold"><span class="px-2"><b>Danh mục/ </b>        Đồ dùng cá nhân</span></h3>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Đồ dùng cá nhân, thời trang - Quần áo</span></h4>
     </div>
     <br>
     <div class="table-themsanpham">
         <div class="add_label">
-            <label>Tiêu đề: </label>
+            <label>Tiêu đề </label>
         </div>
         <div class="add_input">
-            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tên của sản phẩm" />
+            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tiêu đề bài đăng" />
         </div>
-    </div>
-    <!--Loai-->
-    <div class="table-themsanpham2">
-        <div class="add_label">
-            <label>Loại sản phẩm: </label>
-
-        </div>
-        <div class="add_input_2" style="width:40%">
-            <select class="form-control" id="add_l">
-                <option value="" style="text-align:center" selected disabled>--- Loại ---</option>
-                <option value="1" style="text-align:center; font-weight:bold ">Chăn, ra, gối, nệm</option>
-                <option value="2" style="text-align:center; font-weight:bold ">Giày dép</option>
-                <option value="3" style="text-align:center; font-weight:bold ">Quần áo</option>
-                <option value="4" style="text-align:center;font-weight:bold ">Khác</option>
-            </select>
-        </div>        
-        
     </div>
     <!--Thoi gian, gia-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Giá: </label>
+            <label>Giá </label>
 
         </div>
         <div class="add_input_number">
             <input type="text" id="add_gia" class="form-control" placeholder="VND" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
-        </div> 
+        </div>
         <div style="width: 20%">
 
+        </div>
+    </div>
+    <div class="table-themsanpham2">
+        <div class="add_label">
+            <label>Tình trạng </label>
+
+        </div>
+        <div class="add_input_2" style="width:20%">
+            <select class="form-control" id="add_tinhtrang" style="font-weight: bold">
+                <option value="0" style="text-align:left; font-weight:bold ">Mới</option>
+                <option value="1" style="text-align:left; font-weight:bold ">Đã sử dụng</option>
+            </select>
         </div>
     </div>
     <!--So luong, nsx-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Số lượng: </label>
+            <label>Số lượng </label>
 
         </div>
         <div class="add_input_number">
             <input type="number" id="add_sl" min="0" class="form-control" placeholder="Đơn vị" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
         </div>
-        
-        @*<div class="add_label">
-            <label>Nhà sản xuất: </label>
 
-        </div>
-        <div class="add_input_number">
-            <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
-        </div>*@
+        @*<div class="add_label">
+                <label>Nhà sản xuất: </label>
+
+            </div>
+            <div class="add_input_number">
+                <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
+            </div>*@
     </div>
+
     <!--Hinh anh-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Hình ảnh: </label>
+            <label>Hình ảnh </label>
 
         </div>
         <div class="add_input_file">
@@ -84,11 +80,11 @@
     <!--Mota-->
     <div class="table-themsanpham" style="margin-top:2vh">
         <div class="add_label" style="width:50%">
-            <label>Mô tả sản phẩm: </label>
+            <label>Mô tả sản phẩm </label>
         </div>
     </div>
     <div class="table-themsanpham" style="margin-top:0vh">
-        <textarea class="form-control" id="add_mota" placeholder="Tên sản phẩm, nhãn hiệu, chất liệu, màu sắc, ..."></textarea>
+        <textarea class="form-control" id="add_mota" placeholder="Tên, loại quần áo, kích cỡ, chất liệu, màu sắc,..."></textarea>
     </div>
     <!--Nut-->
     <div class="table-themsanpham" style="margin-top:2vh;">
@@ -105,7 +101,7 @@
     function DangSanPham() {
         var tensp = document.getElementById('add_ten').value;
         var mahang = 1;
-        var maloai = document.getElementById('add_l').value;
+        var maloai = 5;
         var gia = $('#add_gia').val();
         var tg = $('#add_thoigian').val();
         var sl = $('#add_sl').val();
