--- a/QL_CDC-master/QL_CDC/Views/SanPham/ThemTuiBalo.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ThemTuiBalo.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-@model IEnumerable<QL_CDC.Models.SelectListModel>
+﻿@model IEnumerable<QL_CDC.Models.SelectListModel>
 
 @{ ViewData["Title"] = "ThemSanPham";
     Layout = "~/Views/Shared/_SecondLayout.cshtml"; }
@@ -9,40 +6,21 @@
 <div class="container-fluid pt-5" style=" margin-top: -40px; margin-left: 0px">
     <!--Ten-->
     <div class="text-left mb-4" style="margin-left:-33px">
-        <h3 class=" px-5 " style="font-weight:bold"><span class="px-2"><b>Danh mục/ </b>        Đồ điện tử</span></h3>
+        <h4 class=" px-5 " style="font-weight:bold; text-decoration:underline"><span class="px-2"><b>Danh mục/ </b> Đồ dùng cá nhân, thời trang - Túi, Balo</span></h4>
     </div>
     <br>
     <div class="table-themsanpham">
         <div class="add_label">
-            <label>Tiêu đề: </label>
+            <label>Tiêu đề </label>
         </div>
         <div class="add_input">
-            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tên của sản phẩm" />
+            <input type="text" id="add_ten" class="form-control" placeholder="Nhập tiêu đề bài đăng" />
         </div>
-    </div>
-    <!--Loai-->
-    <div class="table-themsanpham2">
-        <div class="add_label">
-            <label>Loại sản phẩm: </label>
-
-        </div>
-        <div class="add_input_2" style="width:40%">
-            <select class="form-control" id="add_l">
-                <option value="" style="text-align:center" selected disabled>--- Loại ---</option>
-                <option value="12" style="text-align:center; font-weight:bold ">Laptop</option>
-                <option value="21" style="text-align:center; font-weight:bold ">Điện thoại</option>
-                <option value="10" style="text-align:center; font-weight:bold ">Chuột máy tính</option>
-                <option value="8" style="text-align:center; font-weight:bold ">Bàn phím máy tính</option>
-                <option value="9" style="text-align:center;font-weight:bold ">Bút trình chiếu</option>
-                <option value="11" style="text-align:center;font-weight:bold ">Khác</option>
-            </select>
-        </div>
-
     </div>
     <!--Thoi gian, gia-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Giá: </label>
+            <label>Giá </label>
 
         </div>
         <div class="add_input_number">
@@ -51,44 +29,42 @@
         <div style="width: 20%">
 
         </div>
+    </div>
+    <div class="table-themsanpham2">
+        <div class="add_label">
+            <label>Tình trạng </label>
 
+        </div>
+        <div class="add_input_2" style="width:20%">
+            <select class="form-control" id="add_tinhtrang" style="font-weight: bold">
+                <option value="0" style="text-align:left; font-weight:bold ">Mới</option>
+                <option value="1" style="text-align:left; font-weight:bold ">Đã sử dụng</option>
+            </select>
+        </div>
     </div>
     <!--So luong, nsx-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Số lượng: </label>
+            <label>Số lượng </label>
 
         </div>
         <div class="add_input_number">
-            <input type="number" id="add_sl" min="0" class="form-control" placeholder="Đơn vị" oninput="this.value = this.value.replace(/[^1-9.]/g, '').replace(/(\..*)\./g, '$1');" />
-        </div>
-        <div style="width: 20%">
-
+            <input type="number" id="add_sl" min="0" class="form-control" placeholder="Đơn vị" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" />
         </div>
 
-    </div>
-    <div class="table-themsanpham2">
-        <div class="add_label">
-            <label>Hãng sản xuất: </label>
+        @*<div class="add_label">
+                <label>Nhà sản xuất: </label>
 
-        </div>
-        <div class="add_input_number">
-            <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
-        </div>
+            </div>
+            <div class="add_input_number">
+                <input type="text" id="add_nsx" class="form-control" placeholder="Tên NSX" />
+            </div>*@
     </div>
-    <div class="table-themsanpham2">
-        <div class="add_input_2" style="width:40%">
-            <select class="form-control" id="add_tinhtrang">
-                <option value="" style="text-align:center" selected disabled>--- Tình trạng ---</option>
-                <option value="0" style="text-align:center; font-weight:bold ">Mới</option>
-                <option value="1" style="text-align:center; font-weight:bold ">Đã sử dụng</option>
-            </select>
-        </div>
-    </div>
+
     <!--Hinh anh-->
     <div class="table-themsanpham2">
         <div class="add_label">
-            <label>Hình ảnh: </label>
+            <label>Hình ảnh </label>
 
         </div>
         <div class="add_input_file">
@@ -102,12 +78,11 @@
     <!--Mota-->
     <div class="table-themsanpham" style="margin-top:2vh">
         <div class="add_label" style="width:50%">
-            <label>Mô tả sản phẩm: </label>
+            <label>Mô tả sản phẩm </label>
         </div>
     </div>
     <div class="table-themsanpham" style="margin-top:0vh">
-        <textarea class="form-control" id="add_mota" placeholder='CPU, RAM, Ổ cứng, Màn hình, Card đồ họa, Thiết kế, kích thươc, khối lượng ...'></textarea>
-
+        <textarea class="form-control" id="add_mota" placeholder="Tên, loại (túi xách, balo, ví), kích cỡ, nhãn hiệu, chất liệu, màu sắc,..."></textarea>
     </div>
     <!--Nut-->
     <div class="table-themsanpham" style="margin-top:2vh;">
@@ -122,10 +97,10 @@
 <script>// Dang san pham
     function DangSanPham() {
         var tensp = document.getElementById('add_ten').value;
-        var mahang = 2;
-        var maloai = document.getElementById('add_l').value;
+        var mahang = 1;
+        var maloai = 4;
         var gia = $('#add_gia').val();
-        var tg = document.getElementById('add_tinhtrang').value; 
+        var tg = $('#add_thoigian').val();
         var sl = $('#add_sl').val();
         var nsx = $('#add_nsx').val();
         var img = document.getElementById('add_file').files;
@@ -140,7 +115,7 @@
             formData.append("mahang", mahang);
             formData.append("maloai", maloai);
             formData.append("gia", gia);
-            formData.append("tg", tg);
+            /*formData.append("tg", tg);*/
             formData.append("sl", sl);
             formData.append("nsx", nsx);
             formData.append("mota", mota);
@@ -158,7 +133,7 @@
                     window.location.href = '/CuaHang/DanhSachSanPham'
                 }
             })
-         }
+        }
     }
     function KiemTraDuLieu(tensp, mahang, maloai, gia, tg, sl, nsx, img, mota) {
         var check = false;
