--- a/QL_CDC-master/QL_CDC/Views/Shared/_LoginPartial.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,8 @@
                 <div class="navbar-nav ml-auto py-0">
                     <a href="@Url.Action("DangNhap","TaiKhoan")" class="nav-item nav-link dndk">Đăng nhập &nbsp<i class="fa fa-sign-in mr-1"></i></a>
                     <a href="@Url.Action("DangKy","TaiKhoan")" class="nav-item nav-link dndk">Đăng ký &nbsp<i class="fa fa-user-plus"></i></a>
-                </div> }
+                </div> 
+                }
             else
             {
 <div class="navbar-nav mr-auto py-0">
